--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
 # Our .tmux.conf file
 
-# Setting the prefix from C-b to C-a
+# Settning the prefix from C-b to C-a
 set -g prefix C-a
 # Free the original Ctrl-b prefix keybinding
 unbind C-b
@@ -80,3 +80,21 @@ set -g status-justify centre
 # enable activity alerts
 setw -g monitor-activity on
 set -g visual-activity on
+
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+set -g @continuum-restore 'on'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
