--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,7 @@
 # Our .tmux.conf file
 
+#Git commit 
+
 # Settning the prefix from C-b to C-a
 set -g prefix C-a
 # Free the original Ctrl-b prefix keybinding
